--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,28 +1,57 @@
-html{
-    background: linear-gradient(#08f, #fff);
-    padding: 40px;
-    width: 170px;
+
+  html{
     height: 100%;
-    margin: 0 auto;
   }
   
+  body{
+    background: linear-gradient(#7BB6D4 39%, #9DBA94);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 100vh;
+    margin: 100px;
+    margin-top: 150px;
+    padding: 40px;
+
+}
+
+.btn {
+ background: #FBCA1F;
+ font-family: inherit;
+ padding: 0.6em 1.3em;
+ font-weight: 900;
+ font-size: 18px;
+ border: 3px solid black;
+ border-radius: 0.4em;
+ box-shadow: 0.1em 0.1em;
+}
+
+.btn:hover {
+ transform: translate(-0.05em, -0.05em);
+ box-shadow: 0.15em 0.15em;
+}
+
+.btn:active {
+ transform: translate(0.05em, 0.05em);
+ box-shadow: 0.05em 0.05em;
+}
+
   .trafficlight{
     background: #222;
     background-image: linear-gradient(transparent 2%, #111 2%, transparent 3%, #111 30%);
-    width: 170px;
-    height: 400px;
-    border-radius: 20px;
+    width: 160px;
+    height: 380px;
+    border-radius: 60px;
     position: relative;
-    border: solid 5px #333;
+    border: solid 5px rgb(196, 145, 52);
     
   }
   
   .trafficlight:before{
-    background: #222;
+    background: rgb(170, 61, 61);
     background-image: radial-gradient(#444, #000);
     content: "";
-    width: 170px;
-    height: 150px;
+
     margin: 0 auto;
     position: absolute;
     top: -20px;
@@ -31,19 +60,18 @@ html{
     z-index: -1;
   }
   
-  .trafficlight:after{
+ .trafficlight:after{
     background: #222;
     background-image: linear-gradient(-0deg, #777 10%, #ccc 30%, #000);
     content: "";
-    width: 50px;
-    height: 500px;
+   
     margin-left: 60px;
     position: absolute;
     top: 150px;
     z-index: -1;
   }
   
-  .protector{
+ /*.protector{
     background: transparent;
     width: 180px;
     height: 0;
@@ -56,25 +84,19 @@ html{
     border-radius: 10px;
     z-index: -1;
   }
+  */ 
   
-  .protector:nth-child(2){
-    top: 140px;
-  }
-  
-  .protector:nth-child(3){
-    top: 260px;
-  }
   
   .red{
     opacity: 10%;
     background: red;
     background-image: radial-gradient(brown, transparent);
     background-size: 5px 5px; 
-    width: 100px;
-    height: 100px;
+    width: 85px;
+    height: 85px;
     border-radius: 50%;
     position: absolute;
-    top: 20px;
+    top: 15px;
     left: 35px;
     animation: 13s red infinite;
     border: dotted 2px red;
@@ -88,8 +110,8 @@ html{
     background: yellow;
     background-image: radial-gradient(orange, transparent);
     background-size: 5px 5px;
-    width: 100px;
-    height: 100px;
+    width: 85px;
+    height: 85px;
     border-radius: 50%;
     border: dotted 2px yellow;
     position: absolute;
@@ -106,8 +128,8 @@ html{
     background: green;
     background-image: radial-gradient(lime, transparent);
     background-size: 5px 5px;
-    width: 100px;
-    height: 100px;
+    width: 85px;
+    height: 85px;
     border-radius: 50%;
     border: dotted 2px lime;
     position: absolute;
@@ -118,37 +140,7 @@ html{
       0 0 10px lime;
     animation: 13s green infinite;
   }
-  
-  /* @keyframes red {
-    0%{opacity: 1}
-    20%{opacity: 1}
-    40%{opacity: 1}
-    60%{opacity: .1}
-    80%{opacity: .1}
-    100%{opacity: .1}
-  }
-  
-  @keyframes yellow {
-    0%{opacity: .1}
-    20%{opacity: .1}
-    40%{opacity: 1}
-    50%{opacity: .1}
-    60%{opacity: .1}
-    80%{opacity: .1}
-    86%{opacity: 1}
-    100%{opacity: 1}
-  }
-  
-  @keyframes green {
-    0%{opacity: .1}
-    40%{opacity: .1}
-    60%{opacity: 1}
-    80%{opacity: 1}
-    83%{opacity: .1}
-    100%{opacity: .1}
-  } */
-
-  .green.active{ 
+    .green.active{ 
     opacity: 100%;
   }
 
@@ -160,25 +152,27 @@ html{
   .red.active{ 
     opacity: 100%;
   }
+ 
+
 .counter-wrap {
     position: absolute;
-    top: 0px;
-    left: 0px;
-    padding: 11px 44px;
+    top: 200px;
+    left: 200px;
+    padding:3px 20px;
     margin: 50px;
     background: #222;
     background-image: linear-gradient(transparent 2%, #111 2%, transparent 3%, #111 30%);
-    /* width: 170px; */
+   /*  width: 175px;*/
     /* height: 400px; */
     border-radius: 7px;
     /* position: relative; */
     color: lime;
-    font-size: 50px;
+    font-size: 45px;
     letter-spacing: 5px;
     border: solid 5px #333;
 }
   .counter {
-    font-size: 50px;
+    font-size: 40px;
     line-height: 1em;
     font-family: digital, sans-serif;
     display: inline-block;
@@ -190,214 +184,11 @@ html{
     color: #2d2d2d;
 }
 
-
-
-[class*="push"] {
-    position: relative;
-    display: inline-block;
-    width: 240px;
-    height: 240px;
-    border: 0;
-    margin: 1em;
-    outline: none;
-    background-color: #c2290a;
-    border-radius: 50%;
-    cursor: pointer;
-    -webkit-transition: box-shadow 200ms;
-    transition: box-shadow 200ms;
-  }
-  
-  .push--flat {
-    box-shadow: inset 0 7.5px 0 #da2e0b, inset 0 -7.5px 0 #aa2409, inset 0 0 0 7.5px #b32609, inset 0 0 0 20px #c2290a, inset 0 0 0 24px #611405, inset 0 0 0 26.0869565217px black, inset 0 0 0 32px rgba(247, 133, 110, 0.7), inset 0 0 0 43.6363636364px #c2290a, inset 0 96px 32px #aa2409, inset 0 0 24px 40px #911f08, 0 12px 0 rgba(0, 0, 0, 0.3);
-  }
-  .push--flat:after {
-    content: '';
-    position: absolute;
-    bottom: 12px;
-    left: 24px;
-    display: block;
-    width: 192px;
-    height: 192px;
-    border: 16px solid rgba(0, 0, 0, 0.3);
-    border-width: 0 0 16px;
-    border-radius: 50%;
-    -webkit-transition-duration: 200ms;
-            transition-duration: 200ms;
-  }
-  .push--flat:active, .push--flat.is-pushed {
-    box-shadow: inset 0 7.5px 0 #da2e0b, inset 0 -7.5px 0 #aa2409, inset 0 0 0 7.5px #b32609, inset 0 0 0 20px #c2290a, inset 0 0 0 24px #611405, inset 0 0 0 28.2352941176px black, inset 0 0 0 32px rgba(247, 133, 110, 0.2), inset 0 0 0 43.6363636364px #b32609, inset 0 96px 32px #9b2108, inset 0 0 24px 40px #791a06, 0 12px 0 rgba(0, 0, 0, 0.3);
-    background-color: #b8270a;
-  }
-  .push--flat:active:after, .push--flat.is-pushed:after {
-    bottom: 28px;
-    border-width: 0;
-  }
-  
-  .push--skeuo {
-    box-shadow: inset 0 10px 0 #da2e0b, inset 0 -10px 4px #aa2409, 0 0 4px #c2290a, inset 0 0 8px #791a06, inset 0 0 8px rgba(51, 51, 51, 0.5), inset 0 0 4px 20px #c2290a, inset 0 -8px 6px 24px rgba(51, 51, 51, 0.7), inset 0 0 4px 24px #611405, inset 0 0 4px 24px rgba(51, 51, 51, 0.7), inset 0 0 2px 26.0869565217px black, inset 0 0 2px 30px rgba(247, 133, 110, 0.7), inset 0 12px 0 28.2352941176px rgba(244, 71, 37, 0.7), inset 0 -12px 4px 28.2352941176px rgba(145, 31, 8, 0.2), inset 0 0 0 43.6363636364px #c2290a, inset 0 96px 32px #aa2409, inset 0 0 24px 40px #911f08, 0 6px 12px rgba(0, 0, 0, 0.5);
-  }
-  .push--skeuo:active, .push--skeuo.is-pushed {
-    box-shadow: inset 0 10px 0 #da2e0b, inset 0 -10px 4px #aa2409, 0 0 4px #c2290a, inset 0 0 8px #791a06, inset 0 0 8px rgba(51, 51, 51, 0.5), inset 0 0 4px 20px #c2290a, inset 0 -8px 6px 24px rgba(51, 51, 51, 0.7), inset 0 0 4px 24px #611405, inset 0 0 4px 24px rgba(51, 51, 51, 0.7), inset 0 0 6px 28.2352941176px black, inset 0 0 2px 32px rgba(247, 133, 110, 0.2), inset 0 12px 0 28px rgba(244, 71, 37, 0.5), inset 0 -12px 4px 28px rgba(97, 20, 5, 0.2), inset 0 0 0 43.6363636364px #b32609, inset 0 96px 32px #9b2108, inset 0 0 24px 40px #791a06, 0 6px 12px rgba(0, 0, 0, 0.5);
-    background-color: #b8270a;
-  }
-  .push--skeuo:active:before, .push--skeuo.is-pushed:before {
-    opacity: .5;
-  }
-  .push--skeuo:before {
-    content: '';
-    position: absolute;
-    bottom: 53.3333333333px;
-    left: 66.6666666667px;
-    display: block;
-    width: 109.0909090909px;
-    height: 72.7272727273px;
-    background: rgba(247, 133, 110, 0.2);
-    background: -webkit-gradient(linear, left bottom, left top, from(rgba(250, 173, 158, 0.3)), to(rgba(194, 41, 10, 0.1)));
-    background: linear-gradient(to top, rgba(250, 173, 158, 0.3) 0%, rgba(194, 41, 10, 0.1) 100%);
-    border-radius: 40% 40% 60% 60%;
-    -webkit-transition: opacity 200ms;
-    transition: opacity 200ms;
-  }
-
-  .stop-wrap {
+ .stop-wrap {
     position: absolute;
     top: 25%;
     left: 10px;
 }
-
-
-.smartphone{
-	margin: auto;
-	border-color: #444;
-	background-color: #333;
-	width: 300px;
-	height: 500px;
-	border-radius: 40px;
-	border: 2px solid #bdbdbd;
-	padding: 70px 10px;
-	position: relative;
-}
-
-.volume-up-smartphone{
-	position: absolute;
-	height: 60px;
-	left: -8px;
-	width: 6px; 
-	top: 80px;
-	background-color: #000000;
-	border-radius: 10px 0 0 10px;
-}
-
-.volume-up-smartphone:hover{
-	left: -6px;
-	width: 4px; 
-}
-
-.volume-down-smartphone{
-	position: absolute;
-	height: 60px;
-	left: -8px;
-	width: 6px; 
-	top: 150px;
-	background-color: #000000;
-	border-radius: 10px 0 0 10px;
-}
-
-.volume-down-smartphone:hover{
-	left: -6px;
-	width: 4px; 
-}
-
-
-.power-smartphone{
-	position: absolute;
-	height: 60px;
-	right: -8px;
-	width: 6px; 
-	top: 115px;
-	background-color: #000000;
-	border-radius: 0 10px 10px 0;
-}
-
-.power-smartphone:hover{
-	right: -6px;
-	width: 4px; 
-}
-
-.header-smartphone{
-	display: flex;
-	position: absolute;
-	left: 0; 
-  	right: 0; 
-  	margin-left: auto; 
-  	margin-right: auto;
-	height: 10px;
-	border-radius: 40px;
-	width: 160px;
-	margin-top: -30px;
-}
-
-.speaker-smartphone{
-	display: inline-block;
-	background-color: #000000;
-	height: 10px;
-	width: 100px;
-	border-radius: 40px;
-	margin: auto;
-}
-
-.led-smartphone{
-	display: inline-block;
-	background-color: #fdd835;
-	height: 10px;
-	width: 10px;
-	margin: auto;
-	border-radius: 10px;
-}
-
-.camera-smartphone{
-	display: inline-block;
-	background-color: #000000;
-	height: 10px;
-	width: 10px;
-	margin: auto;
-	border-radius: 10px;
-}
-
-.screen-smartphone{
-	position: absolute;
-	left: 10px; 
-  	right: 10px; 
-  	top: 70px;
-  	bottom: 70px;
-  	margin-left: auto; 
-  	margin-right: auto;
-	background-color: #FFF;
-    border-radius: 5px;
-    padding: 112px 18px;
-}
-
-
-.button-smartphone{
-	position: absolute;
-	left: 0; 
-  	right: 0; 
-  	margin-left: auto; 
-  	margin-right: auto;
-  	width: 50px;
-  	height: 50px;
-  	bottom: 10px;
-  	margin-left: auto; 
-  	margin-right: auto;
-	background-color: #222;
-	border-radius: 40px;
-	border: 2px solid #111;
-}
-
-.button-smartphone:active{
-	background-color: #1a1a1a;
-}
-
 .table-wrap {
     position: absolute;
     top: 0%;
@@ -409,12 +200,12 @@ html{
     position: absolute;
     top: 44%;
     right: 0;
-    padding: 68px;
+    padding: 100px;
 }
 
 .data-wrap div {
     color: #000;
-    font-size: 28px;
+    font-size: 18px;
 }
 
   /*** Digital font in base64 ***/
